Removing deprecated DMAAP library
Issue-ID: POLICY-4402
