# policy-management/src/main/resources/openapi/openapi.yaml
@@ -1,5 +1,5 @@
 #  ============LICENSE_START=======================================================
-#  Copyright (C) 2023 Nordix Foundation
+#  Copyright (C) 2023-2024 Nordix Foundation
 #  ================================================================================
 #  Licensed under the Apache License, Version 2.0 (the "License");
 #  you may not use this file except in compliance with the License.
@@ -3206,8 +3206,6 @@ components:
       type: object
       properties:
         prometheus:
-          type: boolean
-        aaf:
           type: boolean
         name:
           type: string
